@@ -8,6 +8,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix define argument stringification (`"), broke since 3.914. [Joe DErrico]
 
+****  Fix to ignore Unicode UTF-8 BOM sequences, msg2576. [HyungKi Jeong]
+
 
 * Verilator 3.924 2018-06-12
 
